fix: what to do spacing

--- a/app/javascript/pages/inviteTo/invite-to.module.scss
+++ b/app/javascript/pages/inviteTo/invite-to.module.scss
@@ -147,7 +147,6 @@
     }
   }
   .whatToDoList {
-    margin-top: var(--seeds-s10);
     .loadingOverlay {
       --loading-state-height: none;
       padding: var(--seeds-s1) 0;
